pricing 90% on mobile bugg fixed

--- a/web/app/themes/blank/src/scss/layout/_pricing.scss
+++ b/web/app/themes/blank/src/scss/layout/_pricing.scss
@@ -166,7 +166,7 @@
 				border-radius: 30px;
 
 				@include breakpoint(xl) {
-					width: 90%;
+					width: 100%;
 					max-width: 375px;
 				}
 
